# MGFileSystem

./: CMakeLists.txt  Makefile  README  README.md  TODO  commit.sh
FSmanager/: CMakeLists.txt
FSmanager/include/: FSmanager.h
FSmanager/src/: FSmanager.cpp  main.cpp
include/: filesystem_data.h  mg_operations.h  ssh_backend.h  storage_backend.h
src/: filesystem_data.cpp  filesystem_data.h  main.cpp  mg_operations.h  ssh_backend.cpp  storage_backend.h
src/ssh_backend/: README
tests/: list_of_test_cases.py  run_tests.py  test_chmod.py  test_cp.py  test_file_IO.py  test_mkdir.py  test_rm.py  test_rmdir.py  test_tools.py  test_touch.py
